Update to make background images shift to add more variation on mobile instead of fixed background position.

--- a/src/styles/MainContent.css
+++ b/src/styles/MainContent.css
@@ -4,8 +4,6 @@
   overflow-y: auto;
   background-color: #a1ab79;
   background-attachment: fixed;
-  background-position: center center;
-  background-size: cover;
   border: 3px solid #474646;
   width: 100%;
   
